@@ -1,3 +1,7 @@
+2009-03-19  Jeremie Dimino <jeremie@dimino.org>
+
+	* src/core/extlib/extUChar.ml*: added [lowercase], [uppercase], [icompare], [IUChar]
+
 2009-03-17  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
 	* src/batteries_toolchain/batteries_help.ml: in #browse, now replacing all non-alphanumerical characters
